# VeRA

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
libvera/: Cargo.toml
libvera/benches/: decoder_benchmark.rs
libvera/src/: container.rs  decoder.rs  encoder.rs  error.rs  ffi.rs  format.rs  gpu_shaders.rs  lib.rs  metadata.rs  ml_segmentation.rs  performance.rs  plugins.rs  renderer.rs  streaming.rs  tiles.rs  vector.rs  wasm.rs
libvera/tests/: integration_tests.rs
vera-cli/: Cargo.toml
vera-cli/src/: main.rs
vera-enc/: Cargo.toml
vera-enc/benches/: encoder_benchmark.rs
vera-enc/src/: lib.rs  main.rs
