[workspace]
members = [
    "libvera",
    "vera-enc",
    "vera-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VeRA Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vera-format/vera"
homepage = "https://vera-format.org"
description = "VeRA - A hybrid vector-raster image format for infinite zoom photography"
keywords = ["image", "format", "vector", "raster", "zoom"]
categories = ["multimedia::images", "encoding", "graphics"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Image processing
image = "0.24"
imageproc = "0.23"
lyon = "1.0"

# Encoding/decoding
cbor4ii = { version = "0.3", features = ["serde1", "use_std"] }
flate2 = "1.0"
crc32fast = "1.4"
webp = "0.2"
ravif = "0.11"
avif-parse = "1.0"
lz4 = "1.24"

# CLI tools
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Graphics and rendering
wgpu = "25.0"
bytemuck = { version = "1.14", features = ["derive"] }

# FFI and WASM
wasm-bindgen = "0.2"
js-sys = "0.3"

# Testing
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true