[package]
name = "libvera"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core VeRA format decoder and renderer library"
keywords.workspace = true
categories.workspace = true

[lib]
name = "vera"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# Core dependencies
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true

# Image processing
image.workspace = true
imageproc.workspace = true
lyon.workspace = true

# Encoding/decoding
cbor4ii.workspace = true
flate2.workspace = true
crc32fast.workspace = true

# Graphics rendering
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

# FFI and WASM
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[features]
default = ["gpu"]
gpu = ["wgpu", "bytemuck"]
wasm = ["wasm-bindgen", "js-sys"]
ffi = []

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
env_logger.workspace = true

[[bench]]
name = "decoder_benchmark"
harness = false