[package]
name = "libvera"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core VeRA format decoder and renderer library"
keywords.workspace = true
categories.workspace = true

[lib]
name = "vera"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# Core dependencies
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true

# Image processing
image.workspace = true
imageproc.workspace = true
lyon.workspace = true

# Encoding/decoding
cbor4ii.workspace = true
flate2.workspace = true
crc32fast.workspace = true
webp.workspace = true
ravif.workspace = true
avif-parse.workspace = true
lz4.workspace = true
serde_json.workspace = true

# Graphics rendering
wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
lyon_tessellation = { workspace = true, optional = true }
resvg = { workspace = true, optional = true }

# ML and Computer Vision
ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-onnx = { workspace = true, optional = true }
opencv = { workspace = true, optional = true }

# Async and Streaming
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
futures-channel = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }

# Performance and SIMD
rayon = { workspace = true, optional = true }
wide = { workspace = true, optional = true }
simba = { workspace = true, optional = true }
num_cpus = { workspace = true, optional = true }

# Plugin system
libloading = { workspace = true, optional = true }
inventory = { workspace = true, optional = true }

# FFI and WASM
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[features]
default = ["gpu", "streaming", "performance"]
gpu = ["wgpu", "bytemuck", "lyon_tessellation", "resvg", "futures-channel"]
ml = ["ort", "ndarray", "candle-core", "candle-nn", "candle-onnx", "opencv"]
streaming = ["tokio", "futures", "async-stream", "pin-project"]
performance = ["rayon", "wide", "simba", "num_cpus"]
plugins = ["libloading", "inventory"]
wasm = ["wasm-bindgen", "js-sys"]
ffi = []

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
env_logger.workspace = true

[[bench]]
name = "decoder_benchmark"
harness = false