[package]
name = "vera-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "VeRA format CLI tools - encode, inspect, and extract"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "vera"
path = "src/main.rs"

[dependencies]
# Core dependencies
vera = { package = "libvera", path = "../libvera" }
vera-enc = { path = "../vera-enc" }
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

# CLI
clap.workspace = true
indicatif.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile = "3.8"